# raremetal

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile.inc  README  README-docker.md  README.md  requirements.txt  tutorial
dep/: libstatgen.cmake
libRareMetal/: Makefile  Makefile.inc
libRareMetal/include/: Kinship.h  KinshipX.h  MathCholesky.h  MathDeriv.h  MathFloatVector.h  MathGenMin.h  MathGold.h  MathNormal.h  MathSVD.h  PDF.h  PDFchartaxis.h  PDFchartbar.h  PDFchartbasics.h  PDFchartlegend.h  PDFchartline.h  PDFchartmarker.h  PDFchartobject.h  PDFfont.h  PDFgrid.h  PDFgridcell.h  PDFhistogram.h  PDFinfo.h  PDFlinechart.h  PDFlinechartwithpolygon.h  PDFmanhattan.h  PDFpage.h  PDFpageobject.h  Rmath.h  TraitTransformations.h
libRareMetal/mvtnorm/: Makefile  mvt.f  randomF77.c
libRareMetal/pdf/: Makefile  PDF.cpp  PDF.h  PDFchartaxis.cpp  PDFchartaxis.h  PDFchartbar.cpp  PDFchartbar.h  PDFchartbasics.cpp  PDFchartbasics.h  PDFchartlegend.cpp  PDFchartlegend.h  PDFchartline.cpp  PDFchartline.h  PDFchartmarker.cpp  PDFchartmarker.h  PDFchartobject.cpp  PDFchartobject.h  PDFfont.cpp  PDFfont.h  PDFgrid.cpp  PDFgrid.h  PDFgridcell.cpp  PDFgridcell.h  PDFhistogram.cpp  PDFhistogram.h  PDFinfo.cpp  PDFinfo.h  PDFlinechart.cpp  PDFlinechart.h  PDFlinechartwithpolygon.cpp  PDFlinechartwithpolygon.h  PDFmanhattan.cpp  PDFmanhattan.h  PDFpage.cpp  PDFpage.h  PDFpageobject.cpp  PDFpageobject.h
libRareMetal/src/: Kinship.cpp  Kinship.h  KinshipX.cpp  KinshipX.h  Makefile  MathCholesky.cpp  MathCholesky.h  MathDeriv.cpp  MathDeriv.h  MathFloatVector.cpp  MathFloatVector.h  MathGenMin.cpp  MathGenMin.h  MathGold.cpp  MathGold.h  MathNormal.cpp  MathNormal.h  MathSVD.cpp  MathSVD.h  TraitTransformations.cpp  TraitTransformations.h
raremetal/: Makefile
raremetal/src/: Calculate_mvt_pvalue.h  Good.Meta.cpp  GroupFromAnnotation.cpp  GroupFromAnnotation.h  Main.cpp  Makefile  Meta.cpp  Meta.dev.cpp  Meta.dev.h  Meta.dev2.cpp  Meta.h  Meta.new.cpp  Meta.tabix.new.cpp  MetaUtility.cpp  MetaUtility.h  MixChidist.h  My_mvt.h  QuadProg.cpp  QuadProg.h  Rmath.h  SummaryFileReader.cpp  SummaryFileReader.h  WriteLog.h  WritePDF.cpp  WritePDF.h  buggy.Meta.cpp  group.cpp  imhof.h  old_meta.cpp  old_meta.h  original-Meta.cpp  qfc.h
raremetal/tests/: CMakeLists.txt  RMGroupTestReader.cpp  RMGroupTestReader.h  RMSingleVariantReader.cpp  RMSingleVariantReader.h  RMWScoreReader.cpp  RMWScoreReader.h  reader_util.h  tests.cpp
raremetal_tutorial/: COMBINED.QT1.meta.MB.results  COMBINED.QT1.meta.SKAT.results  COMBINED.QT1.meta.VT.results  COMBINED.QT1.meta.burden.results  COMBINED.QT1.meta.singlevar.results  COMBINED.QT1.meta.tophits.burden.tbl  STUDY1.QT1.singlevar.cov.txt  STUDY1.QT1.singlevar.cov.txt.gz.tbi  STUDY1.QT1.singlevar.score.txt.gz.tbi  STUDY2.QT1.singlevar.cov.txt  STUDY2.QT1.singlevar.cov.txt.gz.tbi  STUDY2.QT1.singlevar.score.txt.gz.tbi  command_to_use  covfiles  example1.ped  example1.vcf.gz.tbi  example2.vcf.gz.tbi
raremetalworker/: Makefile
raremetalworker/src/: AutoFit.cpp  AutoFit.h  AutoFit2.cpp  AutoFit2.h  CheckRef.cpp  CheckRef.h  DataQC.cpp  DataQC.h  FastFit.cpp  FastFit.h  GroupFromAnnotation.cpp  GroupFromAnnotation.h  KinshipEmp.cpp  KinshipEmp.h  KinshipEmp.old.cpp  Main.cpp  Makefile  OutputKin.cpp  OutputKin.h  PreMeta.cpp  PreMeta.h  TransformResiduals.cpp  TransformResiduals.h  WriteLog.h  WritePDF.cpp  WritePDF.h  log  logistic.cpp  logistic.h  old-screen-sample-id-vcf.txt  snpHWE.h
script/: calculateOddsRatio.pl
tests/: CMakeLists.txt
tests/datasets/raremetal_tutorial/: command_to_use  example1.ped  example1.vcf.gz.tbi  example2.ped  summaryfiles
tests/datasets/simulated/alt_hyp/: for_rm_test.MetaScore.assoc.gz.tbi
tests/datasets/simulated/heterog/: study0_raremetal.txt.gz.tbi  study1_raremetal.txt.gz.tbi
tests/datasets/simulated/monomorphic/: covFiles  for_rm_test.MetaCov.assoc.gz.tbi  for_rm_test.MetaScore.assoc.gz.tbi  for_rm_test.mask.tab  summaryFiles
tests/datasets/simulated/region/: test.smallchunk.conditionFile  test.smallchunk.mask.tab
tests/raremetal/: script.cmake
tests/raremetal/test_tut_rm/: script.cmake
tests/raremetal/test_tut_rm/expected/: COMBINED.QT1.meta.MB.results  COMBINED.QT1.meta.SKAT_.results  COMBINED.QT1.meta.VT_.results  COMBINED.QT1.meta.singlevar.results
tests/raremetal/test_tut_rm/inputs/: STUDY1.QT1.singlevar.cov.txt.gz.tbi  covfiles  summaryfiles
tests/raremetal/test_tut_rm_rvt_cov/: script.cmake
tests/raremetal/test_tut_rm_rvt_cov/inputs/: STUDY1.QT1.singlevar.cov.txt.gz.tbi  STUDY1.QT1.singlevar.score.txt.gz.tbi  STUDY1.rvtests.MetaCov.assoc.gz.tbi  STUDY1.rvtests.MetaScore.assoc.gz.tbi  STUDY2.QT1.singlevar.cov.txt.gz.tbi  STUDY2.QT1.singlevar.score.txt.gz.tbi  STUDY2.rvtests.MetaCov.assoc.gz.tbi  STUDY2.rvtests.MetaScore.assoc.gz.tbi  group.file  rmw.covfiles  rmw.summaryfiles  rvtests.covfiles  rvtests.summaryfiles
tests/raremetal/tutorial/expected/: COMBINED.QT1.meta.burden.results  COMBINED.QT1.meta.singlevar.results  COMBINED.QT1.meta.tophits.SKAT.tbl
tests/raremetal/tutorial/inputs/: STUDY1.QT1.singlevar.score.txt.gz.tbi  STUDY2.QT1.singlevar.cov.txt.gz.tbi  STUDY2.QT1.singlevar.score.txt.gz.tbi
tests/raremetalworker/: script.cmake
tests/raremetalworker/test_tut_rmw_kin/: script.cmake
tests/raremetalworker/test_tut_rmw_kin/expected/: STUDY1.QT1.singlevar.cov.txt  STUDY1.QT1.singlevar.score.txt  STUDY2.QT1.singlevar.cov.txt  STUDY2.QT1.singlevar.score.txt
tests/raremetalworker/test_tut_rmw_nokin/: script.cmake
tests/raremetalworker/test_tut_rmw_nokin/expected/: STUDY1.QT1.singlevar.cov.txt  STUDY1.QT1.singlevar.score.txt  STUDY2.QT1.singlevar.cov.txt  STUDY2.QT1.singlevar.score.txt
tests/raremetalworker/tutorial/expected/: STUDY1.QT1.singlevar.cov.txt  STUDY2.QT1.singlevar.score.txt
tutorial/: example2.vcf.gz.tbi
